fixed table alignment

--- a/assets/css/filters.css
+++ b/assets/css/filters.css
@@ -4,4 +4,6 @@
     padding: 0.5em;
     background-color: var(--color-gray-light);
     border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto; 
 }
